; ModuleID = '/home/carl/AnghaBench/h2o/t/00unit/lib/http2/extr_casper.c_test_cookie_merge.c'
source_filename = "/home/carl/AnghaBench/h2o/t/00unit/lib/http2/extr_casper.c_test_cookie_merge.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_13__ = type { %struct.TYPE_11__ }
%struct.TYPE_11__ = type { i32 }
%struct.TYPE_12__ = type { i32, i32 }

@.str = private unnamed_addr constant [12 x i8] c"/index.html\00", align 1
@.str.1 = private unnamed_addr constant [11 x i8] c"/index.php\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_cookie_merge to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_cookie_merge() #0 {
  %1 = alloca %struct.TYPE_13__*, align 8
  %2 = alloca %struct.TYPE_12__, align 4
  %3 = alloca %struct.TYPE_12__, align 4
  %4 = alloca %struct.TYPE_12__, align 4
  %5 = alloca %struct.TYPE_12__, align 4
  %6 = call %struct.TYPE_13__* @h2o_http2_casper_create(i32 13, i32 6)
  store %struct.TYPE_13__* %6, %struct.TYPE_13__** %1, align 8
  %7 = load %struct.TYPE_13__*, %struct.TYPE_13__** %1, align 8
  %8 = call i32 @H2O_STRLIT(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %9 = call i32 @h2o_http2_casper_lookup(%struct.TYPE_13__* %7, i32 %8, i32 1)
  %10 = load %struct.TYPE_13__*, %struct.TYPE_13__** %1, align 8
  %11 = call i64 @h2o_http2_casper_get_cookie(%struct.TYPE_13__* %10)
  %12 = bitcast %struct.TYPE_12__* %2 to i64*
  store i64 %11, i64* %12, align 4
  %13 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %2, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %2, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i64 @h2o_strdup(i32* null, i32 %14, i32 %16)
  %18 = bitcast %struct.TYPE_12__* %3 to i64*
  store i64 %17, i64* %18, align 4
  %19 = bitcast %struct.TYPE_12__* %2 to i8*
  %20 = bitcast %struct.TYPE_12__* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %19, i8* align 4 %20, i64 8, i1 false)
  %21 = load %struct.TYPE_13__*, %struct.TYPE_13__** %1, align 8
  %22 = call i32 @h2o_http2_casper_destroy(%struct.TYPE_13__* %21)
  %23 = call %struct.TYPE_13__* @h2o_http2_casper_create(i32 13, i32 6)
  store %struct.TYPE_13__* %23, %struct.TYPE_13__** %1, align 8
  %24 = load %struct.TYPE_13__*, %struct.TYPE_13__** %1, align 8
  %25 = call i32 @H2O_STRLIT(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0))
  %26 = call i32 @h2o_http2_casper_lookup(%struct.TYPE_13__* %24, i32 %25, i32 1)
  %27 = load %struct.TYPE_13__*, %struct.TYPE_13__** %1, align 8
  %28 = call i64 @h2o_http2_casper_get_cookie(%struct.TYPE_13__* %27)
  %29 = bitcast %struct.TYPE_12__* %4 to i64*
  store i64 %28, i64* %29, align 4
  %30 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %4, i32 0, i32 1
  %31 = load i32, i32* %30, align 4
  %32 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %4, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = call i64 @h2o_strdup(i32* null, i32 %31, i32 %33)
  %35 = bitcast %struct.TYPE_12__* %5 to i64*
  store i64 %34, i64* %35, align 4
  %36 = bitcast %struct.TYPE_12__* %4 to i8*
  %37 = bitcast %struct.TYPE_12__* %5 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %36, i8* align 4 %37, i64 8, i1 false)
  %38 = load %struct.TYPE_13__*, %struct.TYPE_13__** %1, align 8
  %39 = call i32 @h2o_http2_casper_destroy(%struct.TYPE_13__* %38)
  %40 = call %struct.TYPE_13__* @h2o_http2_casper_create(i32 13, i32 6)
  store %struct.TYPE_13__* %40, %struct.TYPE_13__** %1, align 8
  %41 = load %struct.TYPE_13__*, %struct.TYPE_13__** %1, align 8
  %42 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %2, i32 0, i32 1
  %43 = load i32, i32* %42, align 4
  %44 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %2, i32 0, i32 1
  %45 = load i32, i32* %44, align 4
  %46 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %2, i32 0, i32 0
  %47 = load i32, i32* %46, align 4
  %48 = call i32 @get_end_of_cookie_value(i32 %45, i32 %47)
  %49 = call i32 @h2o_http2_casper_consume_cookie(%struct.TYPE_13__* %41, i32 %43, i32 %48)
  %50 = load %struct.TYPE_13__*, %struct.TYPE_13__** %1, align 8
  %51 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %2, i32 0, i32 1
  %52 = load i32, i32* %51, align 4
  %53 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %2, i32 0, i32 1
  %54 = load i32, i32* %53, align 4
  %55 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %2, i32 0, i32 0
  %56 = load i32, i32* %55, align 4
  %57 = call i32 @get_end_of_cookie_value(i32 %54, i32 %56)
  %58 = call i32 @h2o_http2_casper_consume_cookie(%struct.TYPE_13__* %50, i32 %52, i32 %57)
  %59 = load %struct.TYPE_13__*, %struct.TYPE_13__** %1, align 8
  %60 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %59, i32 0, i32 0
  %61 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %60, i32 0, i32 0
  %62 = load i32, i32* %61, align 4
  %63 = icmp eq i32 %62, 1
  %64 = zext i1 %63 to i32
  %65 = call i32 @ok(i32 %64)
  %66 = load %struct.TYPE_13__*, %struct.TYPE_13__** %1, align 8
  %67 = call i32 @H2O_STRLIT(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %68 = call i32 @h2o_http2_casper_lookup(%struct.TYPE_13__* %66, i32 %67, i32 0)
  %69 = icmp eq i32 %68, 1
  %70 = zext i1 %69 to i32
  %71 = call i32 @ok(i32 %70)
  %72 = load %struct.TYPE_13__*, %struct.TYPE_13__** %1, align 8
  %73 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %4, i32 0, i32 1
  %74 = load i32, i32* %73, align 4
  %75 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %4, i32 0, i32 1
  %76 = load i32, i32* %75, align 4
  %77 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %4, i32 0, i32 0
  %78 = load i32, i32* %77, align 4
  %79 = call i32 @get_end_of_cookie_value(i32 %76, i32 %78)
  %80 = call i32 @h2o_http2_casper_consume_cookie(%struct.TYPE_13__* %72, i32 %74, i32 %79)
  %81 = load %struct.TYPE_13__*, %struct.TYPE_13__** %1, align 8
  %82 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %81, i32 0, i32 0
  %83 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %82, i32 0, i32 0
  %84 = load i32, i32* %83, align 4
  %85 = icmp eq i32 %84, 2
  %86 = zext i1 %85 to i32
  %87 = call i32 @ok(i32 %86)
  %88 = load %struct.TYPE_13__*, %struct.TYPE_13__** %1, align 8
  %89 = call i32 @H2O_STRLIT(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %90 = call i32 @h2o_http2_casper_lookup(%struct.TYPE_13__* %88, i32 %89, i32 0)
  %91 = icmp eq i32 %90, 1
  %92 = zext i1 %91 to i32
  %93 = call i32 @ok(i32 %92)
  %94 = load %struct.TYPE_13__*, %struct.TYPE_13__** %1, align 8
  %95 = call i32 @H2O_STRLIT(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0))
  %96 = call i32 @h2o_http2_casper_lookup(%struct.TYPE_13__* %94, i32 %95, i32 0)
  %97 = icmp eq i32 %96, 1
  %98 = zext i1 %97 to i32
  %99 = call i32 @ok(i32 %98)
  %100 = load %struct.TYPE_13__*, %struct.TYPE_13__** %1, align 8
  %101 = call i32 @h2o_http2_casper_destroy(%struct.TYPE_13__* %100)
  ret void
}

declare dso_local %struct.TYPE_13__* @h2o_http2_casper_create(i32, i32) #1

declare dso_local i32 @h2o_http2_casper_lookup(%struct.TYPE_13__*, i32, i32) #1

declare dso_local i32 @H2O_STRLIT(i8*) #1

declare dso_local i64 @h2o_http2_casper_get_cookie(%struct.TYPE_13__*) #1

declare dso_local i64 @h2o_strdup(i32*, i32, i32) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @h2o_http2_casper_destroy(%struct.TYPE_13__*) #1

declare dso_local i32 @h2o_http2_casper_consume_cookie(%struct.TYPE_13__*, i32, i32) #1

declare dso_local i32 @get_end_of_cookie_value(i32, i32) #1

declare dso_local i32 @ok(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
